# hisendal

./: .gitignore  LICENSE.md  README.md  build.gradle  buildozer.spec  pyproject.toml  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/androidTest/java/com/example/hisendal/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/hisendal/: AndroidScreen.kt  AndroidScreenViewModel.kt  Device.kt  MainActivity.kt
app/src/main/java/com/example/hisendal/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/hisendal/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
hisendal/: hisendal.kv  main.py  main3.py
hisendal/services/: netsense.py
tests/: test_hisendal.py
